[package]
name = "wabt"
version = "0.7.4"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pepyakin/wabt-rs"
homepage = "https://github.com/pepyakin/wabt-rs"
description = "Bindings to the wabt library"
categories = ["api-bindings"]
keywords = ["tools", "webassembly", "wasm"]

[dependencies]
wabt-sys = { path = "wabt-sys", version = "0.5.3" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx"}
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx", default-features = false}
serde = { git = "https://github.com/mesalock-linux/serde-sgx", default-features = false}

[features]
default = ["std", "mesalock_sgx"]

mesalock_sgx = [
  "serde/mesalock_sgx",
  "serde_json/mesalock_sgx"
]

std = [
  "serde/std",
]
